@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2024-08-01
+ * Guarantee that rows are always returned in a consistent order.
+
 2024-04-29
  * Modernize the install to latest Perl and fix a bunch of perl prereq problems.
 
